@@ -39,7 +39,6 @@
             <ul class="nav-menu">
               <li><a href="#hero">Home</a></li>
               <li><a href="notes.html">Notes</a></li>
-              <li><a href="https://database.wejkey.org">Database</a></li>
             </ul>
           </div>
         </nav>
