@@ -1,5 +1,12 @@
 # Changelog
 
+## [v2026+1.0.12] - February 11, 2026
+
+### Removed
+- Database
+
+--------------------------
+
 ## [v2026+1.0.11] - February 10, 2026
 
 ### Updated
